style: AI section order button added + fix: modal contentBx scrollbar side left/right

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -617,6 +617,18 @@
         text-align: justify;
     }
 
+    .pia{
+        display: flex;
+        justify-content: center;
+        padding-top: 5rem;
+    }
+
+    .eva {
+        display: flex;
+        justify-content: space-around;
+        padding: 4rem 0;
+    }
+
     .circle {
         z-index: 1;
         display: flex;
@@ -763,11 +775,6 @@
             }
         }
 
-
-        &__text {
-            margin: 2rem;
-        }
-
         &__textBx {
             position: relative;
             font-size: 20px;
@@ -776,21 +783,26 @@
         }
 
         &__desc {
+            font-size: 1.5rem;
             margin: 5rem auto;
             text-align: justify;
         }
-    }
 
-    .pia{
-        display: flex;
-        justify-content: center;
-        padding-top: 5rem;
-    }
-
-    .eva {
-        display: flex;
-        justify-content: space-around;
-        padding: 4rem 0;
+        &__button{
+            width: 50%;
+            height: 4rem;
+            padding: 1rem 2rem;
+            margin: 0 auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 1.5rem;
+            background-color: $coolOrange;
+            border: 0;
+            border-radius: 1rem;
+            box-shadow: 0px 0px 5px black;
+            cursor: pointer;
+        }
     }
 }
 
